# Air-Traffic-Control

./: .env.example  .gitignore  README.md  docker-compose.yml
infra/postgres/: init.sql
services/conflict/: Dockerfile
services/conflict/app/: main.py
services/conflict/app/api/: health.py
services/conflict/app/domain/: rules.py
services/conflict/app/services/: detect_conflicts.py
services/conflict/app/workers/: conflict_consumer.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: main.py
services/gateway/app/api/: health.py  reset.py  ws.py
services/gateway/app/static/: index.html
services/gateway/app/workers/: gateway_consumer.py
services/logging/: Dockerfile
services/logging/app/: main.py
services/logging/app/api/: health.py
services/logging/app/workers/: log_consumer.py
services/radar/: Dockerfile
services/radar/app/: main.py
services/radar/app/api/: health.py
services/radar/app/domain/: aircraft.py
services/radar/app/services/: position_updater.py
services/radar/app/workers/: position_broadcaster.py
services/runway/: Dockerfile  requirements.txt
services/runway/app/: main.py
services/runway/app/api/: health.py
services/runway/app/domain/: runway.py
services/runway/app/services/: assign_runway.py
services/runway/app/workers/: runway_consumer.py  runway_processor.py
services/sector/: Dockerfile
services/sector/app/: main.py
services/sector/app/api/: health.py
shared/: pyproject.toml
shared/shared/: events.py  logging_config.py  postgres.py  rabbitmq.py  redis_utils.py
(+5 files in other folders)
