[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atc-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "aio-pika>=9.3",
    "redis>=5.0",
    "asyncpg>=0.29",
    "structlog>=24.1",
]

[tool.setuptools.packages.find]
include = ["shared*"]
